--- a/uni-mall/manifest.json
+++ b/uni-mall/manifest.json
@@ -1,7 +1,7 @@
 {
     "name" : "妙趣坊",
-    "appid" : "__UNI__EAADE10",
-    "description" : "减少重复造轮子，开源微信小程序商城，秒杀、优惠券、多商户、直播卖货、分销等功能。快速搭建一个属于自己的微信小程序商城。QQ交流群：66502035、870579539、151602347欢迎大家进群交流技术。",
+    "appid" : "",
+    "description" : "",
     "versionName" : "1.0.0",
     "versionCode" : 3,
     "transformPx" : false,
@@ -209,7 +209,7 @@
         "enable" : false
     },
     "h5" : {
-        "title" : "妙趣坊-uniapp版",
+        "title" : "妙趣坊",
         "sdkConfigs" : {
             "maps" : {
                 "qqmap" : {
