--- a/platform-admin/src/main/webapp/WF/Scripts/bootstrap/bootstrap-table/package.json
+++ b/platform-admin/src/main/webapp/WF/Scripts/bootstrap/bootstrap-table/package.json
@@ -23,7 +23,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/wenzhixin/bootstrap-table.git"
+    "url": ""
   },
   "keywords": [
     "bootstrap",
@@ -34,12 +34,12 @@
     "pagination",
     "editable"
   ],
-  "author": "wenzhixin <wenzhixin2010@gmail.com> (http://wenzhixin.net.cn/)",
+  "author": "xiaolong",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/wenzhixin/bootstrap-table/issues"
+    "url": ""
   },
-  "homepage": "https://github.com/wenzhixin/bootstrap-table",
+  "homepage": "",
   "config": {
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
