--- a/platform-admin/src/main/resources/j2cache.properties
+++ b/platform-admin/src/main/resources/j2cache.properties
@@ -73,10 +73,10 @@ redis.cluster_name=j2cache
 ## redis cache namespace optional, default[j2cache]
 redis.namespace=
 ## connection 集群环境多个hosts以英文逗号隔开，如 127.0.0.1:6379,127.0.0.1:6378
-redis.hosts=localhost:6379
+redis.hosts=112.74.53.128:6379
 redis.timeout=2000
 ## 集群每个节点密码必须保持一致
-redis.password=
+redis.password=qq@LX20010905
 redis.database=0
 ## redis pool properties
 redis.maxTotal=100
