--- a/uni-mall/manifest.json
+++ b/uni-mall/manifest.json
@@ -1,6 +1,6 @@
 {
     "name" : "妙趣坊",
-    "appid" : "",
+    "appid" : "__UNI__782402D",
     "description" : "",
     "versionName" : "1.0.0",
     "versionCode" : 3,
@@ -160,7 +160,7 @@
         },
         "nvueLaunchMode" : "fast",
         "uniStatistics" : {
-            "enable" : true
+            "enable" : false
         }
     },
     /* 快应用特有相关 */
@@ -206,28 +206,32 @@
         }
     },
     "uniStatistics" : {
-        "enable" : false
+        "enable" : false,
+        "version" : "2"
     },
     "h5" : {
         "title" : "妙趣坊",
         "sdkConfigs" : {
-            "maps" : {
-                "qqmap" : {
-                    "key" : ""
-                }
-            }
+            "maps" : {}
         },
         "domain" : "",
         "router" : {
-            "mode" : "hash",
+            "mode" : "history",
             "base" : "/h5/"
         },
         "uniStatistics" : {
-            "enable" : true
+            "enable" : false
         },
         "devServer" : {
-            "https" : false
-        }
+            "https" : true,
+            "port" : 8080
+        },
+        "optimization" : {
+            "treeShaking" : {
+                "enable" : true
+            }
+        },
+        "template" : "template.h5.html"
     },
     "mp-qq" : {
         "uniStatistics" : {
