解决用户初次登录未保存邮箱信息，商品信息新增厂家，商品url

--- a/platform-admin/src/main/resources/dev/platform.properties
+++ b/platform-admin/src/main/resources/dev/platform.properties
@@ -1,7 +1,7 @@
-jdbc.url=jdbc:mysql://112.74.53.128:3306/platform_shop?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&useSSL=false&serverTimezone=Asia/Shanghai
+jdbc.url=jdbc:mysql://127.0.0.1:3306/platform_shop?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&useSSL=false&serverTimezone=Asia/Shanghai
 jdbc.username=root
-jdbc.password=qq@LX20010905
-
+jdbc.password=123456
+#112.74.53.128
 jdbc.initialSize=5
 jdbc.maxActive=30
 jdbc.minPoolSize=2
