--- a/uni-mall/manifest.json
+++ b/uni-mall/manifest.json
@@ -216,7 +216,7 @@
         },
         "domain" : "",
         "router" : {
-            "mode" : "history",
+            "mode" : "hash",
             "base" : "/h5/"
         },
         "uniStatistics" : {
