--- a/platform-admin/src/main/resources/j2cache.properties
+++ b/platform-admin/src/main/resources/j2cache.properties
@@ -73,6 +73,7 @@ redis.cluster_name=j2cache
 ## redis cache namespace optional, default[j2cache]
 redis.namespace=
 ## connection 集群环境多个hosts以英文逗号隔开，如 127.0.0.1:6379,127.0.0.1:6378
+#生产内部IP:172.16.180.164
 redis.hosts=112.74.53.128:6379
 redis.timeout=2000
 ## 集群每个节点密码必须保持一致
