--- a/platform-admin/src/test/resources/platform.properties
+++ b/platform-admin/src/test/resources/platform.properties
@@ -1,7 +1,7 @@
-jdbc.url=jdbc:mysql://localhost/platform?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8
+jdbc.url=jdbc:mysql://112.74.53.128:3306/platform_shop?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&useSSL=false&serverTimezone=Asia/Shanghai
 jdbc.username=root
-jdbc.password=123456
-
+jdbc.password=qq@LX20010905
+#112.74.53.128
 jdbc.initialSize=5
 jdbc.maxActive=30
 jdbc.minPoolSize=2
@@ -21,7 +21,12 @@ wx.tradeType=JSAPI
 #证书名称，对应不同的商户号
 wx.certName=classpath:/cert/apiclient_cert.p12
 #支付回调地址
-wx.notifyUrl=https://www.fly2you.cn/platform-framework/url/api/notify
+wx.notifyUrl=https://fly2you.cn/platform-framework/api/notify
+
+ali.webAccessTokenhttps=https://openapi.alipay.com/gateway.do
+ali.appId=
+ali.privateKey=
+ali.pubKey=
 
 #安全起见，暴露的短信接口需要配置有效的请求IP
 sms.validIp=127.0.0.1
