--- a/platform-admin/src/main/resources/dev/platform.properties
+++ b/platform-admin/src/main/resources/dev/platform.properties
@@ -1,4 +1,4 @@
-jdbc.url=jdbc:mysql://112.74.53.128:3306/platform_shop?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&useSSL=false&serverTimezone=Asia/Shanghai
+jdbc.url=jdbc:mysql://112.74.53.128:3306/platform_shop?allowPublicKeyRetrieval=true&allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&useSSL=false&serverTimezone=Asia/Shanghai
 jdbc.username=root
 jdbc.password=qq@LX20010905
 #112.74.53.128
